# pacmanSDL

./: CMakeLists.txt  field.c  field.h  ghosts.c  ghosts.h  input.c  input.h  main.c  pacman_sprite.c  pacman_sprite.h  readme.txt  score.c  score.h  sdl_playground.c  sdl_playground.h
src/: inputexample.txt  inputexample2.txt
